--- a/HTml.html
+++ b/HTml.html
@@ -20,10 +20,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="Jogos.html">Jogos</a></li>
-            <li><a href="Sobre.html">Sobre</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="Login.html">Login</a></li>
+            <li><a href="assets/Páginas/Jogos.html">Jogos</a></li>
+            <li><a href="assets/Páginas/Sobre.html">Sobre</a></li>
+            <li><a href="assets/Páginas/contato.html">Contato</a></li>
+            <li><a href="assets/Páginas/Login.html">Login</a></li>
         </ul>
     </nav>
 
